# job-digest

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: index.html
docs/archive/: 2026-03-25.html
src/job_digest/: config.py  db.py  main.py  models.py  publisher.py  scorer.py  utils.py
src/job_digest/sources/: apify.py  ashby.py  base.py  greenhouse.py  lever.py
templates/: digest.html
tests/: test_db.py  test_models.py  test_publisher.py  test_scorer.py  test_sources.py
